# hackathon

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: .gitkeep
app/: __init__.py  admin.py  config.py  database.py  main.py  seed.py
app/api/: auth.py  files.py  router.py  users.py
app/dependencies/: auth.py  database.py
app/middleware/: timing.py
app/models/: __init__.py  base.py  user.py
app/schemas/: __init__.py  auth.py  common.py  user.py
app/services/: auth.py  s3.py  user.py
app/utils/: exceptions.py
backend/: Dockerfile  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1d725155e717_add_is_verified.py  295289631389_add_is_admin_to_users.py  88a634f07d42_initial.py  95ad9a338d80_initial.py  c612a868690e_make_hashed_password_nullable_for_.py
backend/app/: admin.py  config.py  main.py  seed.py
backend/app/api/: ai.py  auth.py  files.py  router.py  users.py
backend/app/dependencies/: auth.py  database.py
backend/app/models/: __init__.py  base.py  file.py  user.py
backend/app/schemas/: user.py
backend/app/services/: ai_factory.py  auth.py  base_ai_service.py  (+5 more)
backend/tests/: conftest.py  test_api_ai.py  test_api_auth.py  test_api_files.py  test_api_users.py  test_schemas.py
frontend/: index.html
monitoring/prometheus/: prometheus.yml
nginx/: nginx.conf
tests/: conftest.py  test_api_auth.py  test_api_files.py  test_api_users.py  test_auth_service.py  test_exceptions.py  test_health.py  test_schemas.py
(+1 files in other folders)
