[project]
name = "fastapi-hackathon-boilerplate"
version = "0.1.0"
description = "FastAPI boilerplate for hackathons — JWT, OAuth2, S3, PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    # FastAPI + Server
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",

    # Config
    "pydantic-settings>=2.3.0",

    # Auth — JWT
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # HTTP client (OAuth2)
    "httpx>=0.27.0",

    # S3
    "aioboto3>=13.0.0",

    # File uploads
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]
